[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.3.2",
    "langchain-cerebras>=0.8.2",
    "langchain-groq>=1.1.2",
    "langchain-openrouter>=0.2.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
